# LTCGeneratorCMake

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
App/: CMakeLists.txt
src/: main.cpp
